@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Change function return type for coherence with experience.
+ common/exp.c info.c
+ include/libproto.h
+Nicolas Weeger 2007-07-17
+
 Remove obsolete color_bg handling.
  common/image.c
  lib/collect.pl.in
